# nftrader

./: Cargo.toml  Checkpoint1.md
cacher/: Cargo.toml  \
cacher/src/: main.rs
docs/: Checkpoint1.md  Checkpoint1_lab2.md  Seminar2.md  Seminar3.md  Seminar4.md  Seminar5.md  Seminar6.md
nftrader-frontend/: README.md  package-lock.json  package.json
nftrader-frontend/src/: main.ts
nftrader-frontend/src/components/: HelloWorld.vue  Login.vue
nftrader-frontend/src/services/: SocketService.ts
nftrader-frontend/src/types/: proto.ts
nftrader_chat/: Cargo.toml  reqs
nftrader_chat/src/: main.rs
nftrader_chat/src/chat/: hub.rs  server.rs
nftrader_chat/src/models/: client.rs  error.rs  mod.rs  proto.rs
nftrader_frontend/: README.md  \  package-lock.json  package.json
nftrader_frontend/src/: main.ts
nftrader_frontend/src/components/: Feed.vue  HelloWorld.vue  Login.vue
nftrader_frontend/src/router/: index.ts
nftrader_frontend/src/services/: SocketService.ts
nftrader_frontend/src/types/: proto.ts
nftrader_image_process/: .env  Cargo.toml  build.rs
nftrader_image_process/migrations/2021-11-15-221003_create_images/: up.sql
nftrader_image_process/src/: client.rs  lib.rs  schema.rs  server.rs
nftrader_image_process/src/database/: imagemutations.rs  imagequeries.rs  mod.rs  utils.rs
nftrader_image_process/src/models/: image.rs
nftrader_proxy/: Cargo.toml  \  base64.txt  build.rs
nftrader_proxy/src/: main.rs
proto/: imageprocess.proto
src/: lib.rs  main.rs
src/chat/: hub.rs  server.rs
src/models/: client.rs  feed.rs  message.rs  proto.rs  user.rs
