[package]
name = "cacher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
lazy_static = "1.4.0"
warp = "0.3.1"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.71"

tonic = "0.6"
prost = "0.9"

[build-dependencies]
tonic-build = "0.6"
