[package]
name = "nftrader_chat"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8.2", features = ["v4", "serde"] }
chrono = "0.4.19"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3.17"
regex = "1.5"
lazy_static = "1.4.0"
tokio-stream = { version = "0.1.7", features = ["sync"] }
warp = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.11.7"
