[package]
name = "nftrader_image_process"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "imagerpc-client"
path = "src/client.rs"

[[bin]]
name = "imagerpc-server"
path = "src/server.rs"

[dependencies]
tonic = "0.6"
prost = "0.9"
futures-core = "0.3"
futures-util = "0.3"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1"

async-stream = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7"
blake2 = "0.8"

[build-dependencies]
tonic-build = "0.6"
