[package]
name = "nftrader_proxy"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
tower = { version = "0.4", features = ["full"] }
env_logger = "0.8.2"
log = "0.4"
pin-project = "1"
