[package]
name = "nftrader_proxy"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
hyper-rustls = "0.22.1"
futures = "0.3"
tower = { version = "0.4", features = ["full"] }
env_logger = "0.8.2"
log = "0.4"
pin-project = "1"
futures-util = "0.3.0"
anyhow = "1.0"
tungstenite = "0.16.0"
tokio-tungstenite = "0.16.0"
mongodb = "2.0.2"
serde = "1.0.130"
serde_json = "1.0.71"
lazy_static = "1.4.0"

tonic = "0.6"
prost = "0.9"

warp = "0.3.1"
reqwest = "0.11.7"

[build-dependencies]
tonic-build = "0.6"
